--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,16 @@
 .header{
-    background: blue;
+    background-color: #282c34;
+    color: #ffffff;
+    text-align: center;
+    padding: 2rem;
+    
+    img{
+        display: inline-block;
+        height: 200px;;
+    }
+
     h1{
-        color: red;
+        color: #61dafb;
+        font-size: 3rem;
     }
 }
