--- a/src/containers/Root/Root.scss
+++ b/src/containers/Root/Root.scss
@@ -1,3 +1,6 @@
-#root{
-    background: red;
+@import url('https://fonts.googleapis.com/css?family=Lato:400,900');
+
+body{
+    margin: 0;
+    font-family: 'Lato', sans-serif;
 }
